[package]
name = "inkify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
silicon = { git = "https://github.com/Aloxaf/silicon.git" }
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.26"
image = "0.24.7"
anyhow = "1.0.75"
thiserror = "1.0.49"
syntect = "5.1.0"
font-kit = "0.11.0"
reqwest = "0.11.22"